--- a/style_1.css
+++ b/style_1.css
@@ -5,7 +5,9 @@
   background-size: 100% 100% ;
   background-repeat: no-repeat;
 }
-
+.active:active{
+color: white;
+}
 
 .registr{
 width: 500px;
@@ -34,11 +36,17 @@ margin: auto;
   font-size: 20px;
 }
 input{
-  margin-left: 40px;
+    margin-left: 40px;
   width: 380px ;
   height: 45px;
   border-radius: 5px;
   border: none ;
+}
+input:valid{
+
+}
+input:required{
+border: 3px solid red ;
 }
 input:focus{
   outline: none;
